--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,76 @@
-
-
 # Virtual environments
 .venv/
 venv/
 env/
 ENV/
 
-# Environment and editor
+# Environment and secrets
 .env
 .env.*
+!.env.example
+
+# IDE and editors
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
 # OS
 .DS_Store
 Thumbs.db
+desktop.ini
 
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
 
+# Logs and temp
+*.log
+logs/
+tmp/
+temp/
+*.tmp
 
+# Testing and coverage
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Optional: large model weights (uncomment if you don't want to track .pt files)
+# Trained_Model/*.pt
+
+# MongoDB local data (if used)
+data/db/
+
+# Cursor / project
+.cursor/
